--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1>Title</h1><h2>Logo + Image tab(sobre radio) tab(compartir) Ambulante(tab) buttons(english)(spanish)</h2>
 <div>text and "subscribe" button</div>
 <h3>Title</h3>
-<p>Verto duis ad gemino vero nisl luptatum valetudo veniam ullamcorper olim. Iriure aliquam blandit quis ingenium incassum abluo ratis. Velit hos lobortis. Quia nimis utinam qui vicis meus ut melior suscipere incassum abico tincidunt. Illum aliquip facilisi patria suscipit refoveo gravis opes utinam te odio.
+<p>some shit Verto duis ad gemino vero nisl luptatum valetudo veniam ullamcorper olim. Iriure aliquam blandit quis ingenium incassum abluo ratis. Velit hos lobortis. Quia nimis utinam qui vicis meus ut melior suscipere incassum abico tincidunt. Illum aliquip facilisi patria suscipit refoveo gravis opes utinam te odio.
     Delenit praesent iusto consequat. Inhibeo ulciscor ex. Vel abigo eros accumsan odio demoveo ut suscipere. Minim exerci vero abdo ideo iustum autem pecus exerci at iustum eum.
 
     Illum praemitto duis eligo velit esse persto secundum. Volutpat foras molior vulpes feugiat in. Ludus luctus nulla capio nulla feugiat neque eros iusto minim. Et singularis nisl plaga consequat defui damnum inhibeo a ille. Eum odio nulla meus et lobortis fere nonummy duis tincidunt lobortis. Blandit capto defui usitas exputo delenit.</p>
